--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "check": "tsc"
   },
   "dependencies": {
+    "@types/node": "^22.14.0",
+    "acorn": "^8.14.1",
+    "astring": "^1.9.0",
     "canvas": "^3.1.0",
     "discord.js": "^14.17.2",
     "sharp": "git+ssh://git@github.com/lovell/sharp.git",
