--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,21 @@
 {
-  "compilerOptions": {
-    "module": "ESNext",
-    "target": "ESNext",
-    "moduleResolution": "node",
-    "skipLibCheck": true,
-    "resolveJsonModule": true,
-    "esModuleInterop": true,
-    "allowImportingTsExtensions": true,
-    "noEmit": true,
-    "forceConsistentCasingInFileNames": true,
-    "strict": true
-  },
-  "ts-node": {
     "compilerOptions": {
-      "module": "ESNext"
-    }
-  },
-  "include": ["src/*"]
+        "module": "ESNext",
+        "target": "ESNext",
+        "moduleResolution": "node",
+        "skipLibCheck": true,
+        "resolveJsonModule": true,
+        "esModuleInterop": true,
+        "allowImportingTsExtensions": true,
+        "noEmit": true,
+        "forceConsistentCasingInFileNames": true,
+        "verbatimModuleSyntax": true,
+        "strict": true
+    },
+    "ts-node": {
+        "compilerOptions": {
+            "module": "ESNext"
+        }
+    },
+    "include": ["src/*"]
 }
