build: use --experimental-strip-types instead of ts-node for better errors on load

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "dist/index.js",
   "scripts": {
-    "start": "node --no-warnings=ExperimentalWarning --loader ts-node/esm src/index.ts",
+    "start": "node --no-warnings=ExperimentalWarning --experimental-strip-types src/index.ts",
     "check": "tsc"
   },
   "dependencies": {
@@ -20,9 +20,14 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "typescript": "^5.5.3"
+    "typescript": "^5.8.3"
   },
   "private": true,
+  "engines": {
+    "node": ">= 22.6.0",
+    "pnpm": ">= 10.2.0"
+  },
+  "packageManager": "pnpm@10.2.0",
   "pnpm": {
     "ignoredBuiltDependencies": [
       "canvas"
