--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,14 +8,12 @@
         "esModuleInterop": true,
         "allowImportingTsExtensions": true,
         "noEmit": true,
+        "erasableSyntaxOnly": true,
         "forceConsistentCasingInFileNames": true,
         "verbatimModuleSyntax": true,
         "strict": true
     },
-    "ts-node": {
-        "compilerOptions": {
-            "module": "ESNext"
-        }
-    },
-    "include": ["src/**/*.ts"]
+    "include": [
+        "src/**/*.ts"
+    ]
 }
