--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.808.0",
+    "@prisma/client": "^6.12.0",
     "@types/node": "^22.14.0",
     "acorn": "^8.14.1",
     "astring": "^1.9.0",
@@ -15,6 +16,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "prisma": "^6.12.0",
     "typescript": "^5.8.3"
   },
   "private": true,
@@ -28,7 +30,9 @@
       "canvas"
     ],
     "onlyBuiltDependencies": [
+      "@prisma/engines",
       "canvas",
+      "prisma",
       "sharp"
     ],
     "patchedDependencies": {
