--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
       "canvas"
     ],
     "onlyBuiltDependencies": [
+      "@prisma/client",
       "@prisma/engines",
       "canvas",
       "prisma",
