--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.808.0",
+    "@napi-rs/simple-git": "^0.1.21",
     "@prisma/client": "^6.12.0",
     "@types/node": "^22.14.0",
+    "@types/tmp": "^0.2.6",
     "acorn": "^8.14.1",
     "astring": "^1.9.0",
     "canvas": "^3.1.0",
     "discord.js": "^14.19.3",
+    "linguist-js": "^2.9.2",
     "sharp": "git+ssh://git@github.com/lovell/sharp.git",
+    "tmp": "^0.2.5",
     "zod": "^3.24.2"
   },
   "devDependencies": {
